postress.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres #kindly create the headless service first
  replicas: 3
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
          name: web
        volumeMounts: #this is inisde your container
        - name: www
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-path 
      resources:
        requests:
          storage: 1Gi
