backend.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: crm
spec:
  podSelector:  #means stop all the communcation for the pod inb this namespace
    matchLabels:
      run: backend
  policyTypes:
  - egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: frontend
