logic.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logic-policy
  namespace: crm
spec:
  podSelector:  #means stop all the communcation for the pod inb this namespace
    matchLabels:
      run: logic
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: frontend
